--- a/rails-react-starter-tutorial/app/views/pages/home.html.erb
+++ b/rails-react-starter-tutorial/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <!-- app/views/pages/home.html.erb -->
 
-<div id="quotes"></div>
+<div id="quotes" data-starting-quote-id='<%= @first_quote_id %>'></div>
 <%= javascript_pack_tag 'quotes' %>
