--- a/rails-react-starter-tutorial/app/views/pages/home.html.erb
+++ b/rails-react-starter-tutorial/app/views/pages/home.html.erb
@@ -1,4 +1,6 @@
 <!-- app/views/pages/home.html.erb -->
 
-<div id="quotes" data-starting-quote-id='<%= @first_quote_id %>'></div>
+<div class="flex-container">
+  <div id="quotes" data-starting-quote-id='<%= @first_quote_id %>'></div>
+</div>
 <%= javascript_pack_tag 'quotes' %>
