--- a/devise-facebook-oauth/app/views/layouts/application.html.erb
+++ b/devise-facebook-oauth/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <body>
     <% if user_signed_in? %>
       <%= link_to "Edit Profile", edit_user_registration_path %>
-      <%= link_to "Logout", destroy_user_session_path, :delete %>
+      <%= link_to "Logout", destroy_user_session_path, method: :delete %>
     <% else %>
       <%= link_to "Sign Up", new_user_registration_path %>
       <%= link_to "Login", new_user_session_path %>
